--- a/#src/scss/_UI.scss
+++ b/#src/scss/_UI.scss
@@ -19,6 +19,15 @@
     }
 }
 
+.section-title-block{
+    padding-left: 50px;
+    padding-right: 50px;
+    // margin-bottom: 38px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
 .page-title{
     font-family: Akrobat;
     font-style: normal;
@@ -29,9 +38,15 @@
     color: #141622;
     margin-top: 33px;
     margin-bottom: 38px;
-    width: 100%;
+    // width: 100%;
     padding-left: 50px;
     text-align: left;
+}
+
+.page-title-block{
+    width:calc(100% - 100px);
+    display: flex;
+    justify-content: space-between;
 }
 
 .btn{
@@ -45,7 +60,7 @@
     font-style: normal;
     font-weight: 900;
     font-size: 16px;
-    @include adaptive-value('font-size', 16, 12, 3);
+    // @include adaptive-value('font-size', 16, 14, 3);
     line-height: 125%;
     text-transform: uppercase;
     font-feature-settings: 'pnum' on, 'lnum' on;
